Strip out user attribute logic